5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1637_2447.log
== TEST (2019-04-04 13:04:00) 
-- CODE:
preco = float(input("ta caro o alguel: "))
pag = float(input("pague o aluguel: "))

if( preco > pagamento):
	x = preco - pagamento
	print("falta", x )
else: 
	y = pagamento - preco
	print("troco", y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if( preco > pagamento):
NameError: name 'pagamento' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:04:47) 
-- CODE:
preco = float(input("ta caro o alguel: "))
pag = float(input("pague o aluguel: "))

if( preco > pagamento):
	x = preco - pagamento
	print("falta", x )
else: 
	y = pagamento - preco
	print("troco", y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if( preco > pagamento):
NameError: name 'pagamento' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:05:11) 
-- CODE:
preco = float(input("ta caro o alguel: "))
pag = float(input("pague o aluguel: "))

if( preco > pag):
	x = preco - pag
	print("falta", x )
else: 
	y = pag - preco
	print("troco", y)
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 13:05:18) 
-- CODE:
preco = float(input("ta caro o alguel: "))
pag = float(input("pague o aluguel: "))

if( preco > pag):
	x = preco - pag
	print("falta", x )
else: 
	y = pag - preco
	print("troco", y)
-- EXECUTION TIME:
0.24668
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:05:42) 
-- CODE:
preco = float(input("ta caro o alguel: "))
pag = float(input("pague o aluguel: "))

if( preco > pag):
	x = preco - pag
	print("falta", x )
else: 
	y = pag - preco
	print("troco de", y)
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 13:05:48) 
-- CODE:
preco = float(input("ta caro o alguel: "))
pag = float(input("pague o aluguel: "))

if( preco > pag):
	x = preco - pag
	print("falta", x )
else: 
	y = pag - preco
	print("troco de", y)
-- EXECUTION TIME:
0.13121
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:06:11) 
-- CODE:
preco = float(input("ta caro o alguel: "))
pag = float(input("pague o aluguel: "))

if( preco > pag):
	x = preco - pag
	print("Falta", x )
else: 
	y = pag - preco
	print("Troco de", y)
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 13:06:17) 
-- CODE:
preco = float(input("ta caro o alguel: "))
pag = float(input("pague o aluguel: "))

if( preco > pag):
	x = preco - pag
	print("Falta", x )
else: 
	y = pag - preco
	print("Troco de", y)
-- EXECUTION TIME:
0.126087
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 12:50:23) 
-- CODE:
preco = float(input("ta caro o alguel: "))
pag = float(input("pague o aluguel: "))

if( preco > pag):
	x = preco - pag
	print("Falta", x )
else: 
	y = pag - preco
	print("Troco de", y)
-- EXECUTION TIME:
0.152359
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:41:30) 
-- CODE:
preco = float(input("ta caro o alguel: "))
pag = float(input("pague o aluguel: "))

if( preco > pag):
	x = preco - pag
	print("Falta", x )
else: 
	y = pag - preco
	print("Troco de", y)
-- EXECUTION TIME:
0.156732
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:41:37) 
-- CODE:
preco = float(input("ta caro o alguel: "))
pag = float(input("pague o aluguel: "))

if( preco > pag):
	x = preco - pag
	print("Falta", x )
else: 
	y = pag - preco
	print("Troco de", y)
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:41:47) 
-- CODE:
preco = float(input("ta caro o alguel: "))
pag = float(input("pague o aluguel: "))

if( preco > pag):
	x = preco - pag
	print("Falta", x )
else: 
	y = pag - preco
	print("Troco de", y)
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
